--- a/Vue系列/组件.md
+++ b/Vue系列/组件.md
@@ -1,1 +1,26 @@
 # Vue自定义组件
+## 数据流 props down event up
+1. sync属性
+2. 基础类型，作为props，在子组件中修改该值 控制台会发出警告，并且父组件中的内容不会改变
+3. 引用类型，作为props，子组件中修改，控制台不会发出警告，并且父组件中的内容发生了改变
+
+## 列表渲染
+1. v-for 中绑定key值 :key 便于DOM重用
+2. 替换vm属性中的数组内容 this.arr = newarr; 也会发生
+
+## 条件渲染
+1. v-show 模板在均会编译，切换display属性来控制显隐性；v-if是真实的条件渲染
+2. 使用<template>来包裹模板，渲染完毕后才显示
+
+## slot插槽分发
+```javascript
+  //具名插槽
+   <slot name="header"></slot>
+   this.$slots.[name] 
+
+   //作用域插槽
+   <slot text="传递给分发组件的信息"> </slot>
+
+   //在模板中使用的方式 构建了父子上下级关系
+   <com1 slot="header"> </com1>
+```
