--- a/Vue系列/组件.md
+++ b/Vue系列/组件.md
@@ -1,4 +1,7 @@
 # Vue自定义组件
+
+## 模板
+1. 单一的根节点
 ## 数据流 props down event up
 1. sync属性
 2. 基础类型，作为props，在子组件中修改该值 控制台会发出警告，并且父组件中的内容不会改变
@@ -16,11 +19,27 @@
 ```javascript
   //具名插槽
    <slot name="header"></slot>
-   this.$slots.[name] 
-
-   //作用域插槽
-   <slot text="传递给分发组件的信息"> </slot>
-
+   this.$slots.[name]   //在父组件内部 获取 分发组件的内容
    //在模板中使用的方式 构建了父子上下级关系
    <com1 slot="header"> </com1>
+
+   //作用域插槽 base.vue
+   <slot text="传递给分发组件的信息"> </slot>
+   //在模板中的使用方式
+   <base>
+    <template slot-scope="props">
+        <span>hello from parent</span>
+        <span>{{ props.text }}</span>
+      </template>
+   </base>
+
+```
+
+## 组件内部的css作用域
+
+在自定义的组件<comp> 添加id 或者 class 属性，css选择器选中后编写css会**覆盖** <comp>内部的样式(该样式表现形式 类似于)
+
+```html
+  <style scoped></style>
+  会在组件template内部 所有的DOM上添加 自定义属性 data-v-04c2046b
 ```
