--- a/Vue系列/组件.md
+++ b/Vue系列/组件.md
@@ -1,5 +1,23 @@
 # Vue自定义组件
 
+## 响应式
+   v-bind 绑定 computed属性 完成 子组件属性值 响应式动态绑定
+   子组件内部配合 this.$watch()来完成 响应式变化
+
+  ### 操作数组响应式操作
+   vm.arr = [newvlaue]   //替换新数组
+   splice(newLength) //修改长度、删除元素
+   Vue.set(vm.array,index,newValue) //修改新值
+
+   你可能认为这将导致 Vue 丢弃现有 DOM 并重新渲染整个列表。幸运的是，事实并非如此。Vue 为了使得 DOM 元素得到最大范围的重用而实现了一些智能的、启发式的方法，所以用一个含有相同元素的数组去替换原来的数组是非常高效的操作。
+
+   ### 添加嵌入式
+   - Vue.set(vm.userProfile, 'age', 27);
+   - vm.userProfile = Object.assign({}, vm.userProfile, {
+      age: 27,
+      favoriteColor: 'Vue Green'
+     })
+
 ## 模板
 1. 单一的根节点
 ## 数据流 props down event up
@@ -43,3 +61,6 @@
   <style scoped></style>
   会在组件template内部 所有的DOM上添加 自定义属性 data-v-04c2046b
 ```
+
+## 参考
+https://imys.net/20170317/write-good-front-end-component.html 良好的编写组件
