--- a/WEB API及浏览器/浏览器缓存.md
+++ b/WEB API及浏览器/浏览器缓存.md
@@ -1,4 +1,27 @@
 # 浏览器缓存
 
+浏览器对GET请求，缓存响应的内容
+## 通过时间戳 配合304状态码完成缓存
+- Expires Last-Modified If-Modified-Sinces
+Pragma:no-cache :表示资源不缓存，直接从服务器端获取
+
+> HTTP 1.1 新增的缓存控制
+
+## ETag/If-None-Match使用文件内容的hash码 配合304完成缓存
+
+
+## 服务器端主动要求客户端缓存(Cache-Control,max-age)
+- no-cache,private,no-store,no-transform，max-age
+
+no-cache:表示必须先与服务器确认返回的响应是否被更改，然后才能使用该响应来满足后续对同一个网址的请求。因此，如果存在合适的验证令牌 (ETag)，no-cache 会发起往返通信来验证缓存的响应，如果资源未被更改，可以避免下载。
+
+no-store: 禁止缓存任何响应
+
+max-age:单位是 秒
+
+
+现在默认浏览器均默认使用HTTP 1.1，所以Expires和Last-Modified的作用基本可以忽略，具备Cache-Control和Etag即可
+
 ## 参考文章
 http://www.cnblogs.com/skylar/p/browser-http-caching.html 浏览器缓存
+http://www.cnblogs.com/skynet/archive/2010/12/11/1903347.html Keep-Alive 解释
