--- a/Vue系列/组件.md
+++ b/Vue系列/组件.md
@@ -2,7 +2,8 @@
 
 ## 响应式
    v-bind 绑定 computed属性 完成 子组件属性值 响应式动态绑定
-   子组件内部配合 this.$watch()来完成 响应式变化
+   - 子组件内部配合 this.$watch()来完成 响应式变化
+   - 或者使用watch:{}选项
 
   ### 操作数组响应式操作
    vm.arr = [newvlaue]   //替换新数组
